--- a/components/pdf/pdf.module.scss
+++ b/components/pdf/pdf.module.scss
@@ -117,7 +117,7 @@ $imgBox: 200px;
   align-items: flex-start;
 
   & > div:not(:last-child) {
-    margin-bottom: 2rem;
+    margin-bottom: 1.7rem;
   }
 
   //Bryon Name
